feat: new endpoints & docs for them
